--- a/mia/Base.lproj/Share.storyboard
+++ b/mia/Base.lproj/Share.storyboard
@@ -119,6 +119,26 @@
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="x4g-QE-TXg"/>
                                                 </constraints>
                                             </view>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wB8-R6-NRd" customClass="HXIBButton">
+                                                <rect key="frame" x="192" y="231" width="60" height="28"/>
+                                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="Nio-gK-KHw"/>
+                                                    <constraint firstAttribute="height" constant="28" id="cRl-YQ-aNE"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <state key="normal" title="重选">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="14"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="resetButtonPressed" destination="Dxq-Jl-kQw" eventType="touchUpInside" id="taR-mA-FKC"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <gestureRecognizers/>
@@ -133,9 +153,11 @@
                                             <constraint firstItem="aKA-Fg-Bsf" firstAttribute="top" secondItem="tja-YF-1QB" secondAttribute="bottom" constant="2" id="S0A-2t-0De"/>
                                             <constraint firstItem="2CH-Dd-Jyt" firstAttribute="centerX" secondItem="eqr-fl-Bew" secondAttribute="centerX" id="TCd-1b-q5Q"/>
                                             <constraint firstItem="o9K-gF-vwm" firstAttribute="top" secondItem="eqr-fl-Bew" secondAttribute="bottom" constant="15" id="UPt-dY-GPd"/>
+                                            <constraint firstItem="wB8-R6-NRd" firstAttribute="trailing" secondItem="Nne-Bv-oUO" secondAttribute="trailing" constant="-15" id="UQZ-Uq-zSm"/>
                                             <constraint firstItem="eqr-fl-Bew" firstAttribute="centerX" secondItem="e3c-v4-ZHl" secondAttribute="centerX" id="Zpq-BK-EyY"/>
                                             <constraint firstItem="aKA-Fg-Bsf" firstAttribute="centerX" secondItem="tja-YF-1QB" secondAttribute="centerX" id="a6P-gl-jHc"/>
                                             <constraint firstItem="2CH-Dd-Jyt" firstAttribute="centerY" secondItem="eqr-fl-Bew" secondAttribute="centerY" constant="40" id="cav-Ys-3sc"/>
+                                            <constraint firstItem="wB8-R6-NRd" firstAttribute="bottom" secondItem="Nne-Bv-oUO" secondAttribute="bottom" constant="-15" id="cwZ-1T-CJV"/>
                                             <constraint firstItem="S97-IU-UTo" firstAttribute="centerX" secondItem="o9K-gF-vwm" secondAttribute="centerX" id="gJy-W0-fkN"/>
                                             <constraint firstItem="kpK-2C-los" firstAttribute="centerY" secondItem="eqr-fl-Bew" secondAttribute="centerY" id="hDX-Ri-k5B"/>
                                             <constraint firstItem="eqr-fl-Bew" firstAttribute="top" secondItem="e3c-v4-ZHl" secondAttribute="top" constant="60" id="iWd-oV-0Oc"/>
@@ -250,6 +272,7 @@
                         <outlet property="locationViewHeightConstraint" destination="svq-sX-QoR" id="C90-VW-0ne"/>
                         <outlet property="nickNameLabel" destination="o9K-gF-vwm" id="Rdl-jh-fSj"/>
                         <outlet property="playButton" destination="3ZK-C9-oiT" id="Zk2-S5-e8h"/>
+                        <outlet property="resetButton" destination="wB8-R6-NRd" id="3dC-ga-Poz"/>
                         <outlet property="scrollView" destination="gWa-kU-Jf2" id="2jQ-x1-arT"/>
                         <outlet property="scrollViewBottmonConstraint" destination="MY2-Yg-YS8" id="axI-fM-7ff"/>
                         <outlet property="shareButton" destination="72x-Sd-5g2" id="8XF-mN-XQL"/>
