--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -85,32 +85,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="hxc-oW-fRk">
-                            <rect key="frame" x="0.0" y="386" width="320" height="10"/>
+                            <rect key="frame" x="0.0" y="388" width="320" height="10"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXProfileShareCell" rowHeight="228" id="h7b-s1-DXZ" userLabel="HXProfileShareCell" customClass="HXProfileShareCell">
-                                <rect key="frame" x="0.0" y="28" width="320" height="228"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXProfileShareCell" rowHeight="230" id="h7b-s1-DXZ" userLabel="HXProfileShareCell" customClass="HXProfileShareCell">
+                                <rect key="frame" x="0.0" y="28" width="320" height="230"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h7b-s1-DXZ" id="FvN-SF-mWx">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="228"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="230"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qe8-TQ-eDn" userLabel="Container View">
-                                            <rect key="frame" x="8" y="8" width="304" height="220"/>
+                                            <rect key="frame" x="8" y="8" width="304" height="222"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好喜欢里面的编曲，给人耳目一新的感觉。" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZc-kF-vNu">
-                                                    <rect key="frame" x="10" y="14" width="284" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="u0F-vn-Pjo"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="好喜欢里面的编曲" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="VZc-kF-vNu">
+                                                    <rect key="frame" x="10" y="14" width="284" height="19"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2015-12031 分享了：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OSc-wG-GHP">
-                                                    <rect key="frame" x="10" y="40" width="284" height="17"/>
+                                                    <rect key="frame" x="10" y="39" width="284" height="17"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="17" id="kk8-Nj-nga"/>
                                                     </constraints>
@@ -119,28 +116,28 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Brc-9e-1li">
-                                                    <rect key="frame" x="10" y="63" width="284" height="117"/>
+                                                    <rect key="frame" x="10" y="62" width="284" height="120"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Az-Ky-gZ6">
-                                                            <rect key="frame" x="0.0" y="0.0" width="117" height="117"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="5Az-Ky-gZ6" secondAttribute="height" multiplier="1:1" id="Cl2-JV-SLg"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pramore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zep-6s-mp4">
-                                                            <rect key="frame" x="137" y="35" width="139" height="22"/>
+                                                            <rect key="frame" x="140" y="36" width="136" height="22"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-Lin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVD-2g-1IU">
-                                                            <rect key="frame" x="137" y="61" width="139" height="18"/>
+                                                            <rect key="frame" x="140" y="62" width="136" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAf-lM-nYa">
-                                                            <rect key="frame" x="41" y="41" width="35" height="35"/>
+                                                            <rect key="frame" x="43" y="43" width="35" height="35"/>
                                                             <state key="normal" image="M-PlayIcon"/>
                                                             <connections>
                                                                 <action selector="playButtonPressed" destination="h7b-s1-DXZ" eventType="touchUpInside" id="BqL-YU-042"/>
@@ -153,6 +150,7 @@
                                                         <constraint firstAttribute="bottom" secondItem="5Az-Ky-gZ6" secondAttribute="bottom" id="6qD-6M-s8e"/>
                                                         <constraint firstItem="xVD-2g-1IU" firstAttribute="trailing" secondItem="Zep-6s-mp4" secondAttribute="trailing" id="760-ku-0rF"/>
                                                         <constraint firstItem="Zep-6s-mp4" firstAttribute="bottom" secondItem="5Az-Ky-gZ6" secondAttribute="centerY" constant="-2" id="EjB-kO-2XI"/>
+                                                        <constraint firstAttribute="height" constant="120" id="MwF-5K-VVq"/>
                                                         <constraint firstAttribute="trailing" secondItem="Zep-6s-mp4" secondAttribute="trailing" constant="8" id="PMb-zH-ZfN"/>
                                                         <constraint firstItem="xVD-2g-1IU" firstAttribute="leading" secondItem="Zep-6s-mp4" secondAttribute="leading" id="Qsr-DH-ugs"/>
                                                         <constraint firstItem="5Az-Ky-gZ6" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="top" id="UXF-eQ-m8I"/>
@@ -163,7 +161,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xm4-bL-pTE">
-                                                    <rect key="frame" x="0.0" y="180" width="40" height="40"/>
+                                                    <rect key="frame" x="0.0" y="182" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="hcw-XV-V6L"/>
                                                         <constraint firstAttribute="width" constant="40" id="sOj-36-MNj"/>
@@ -174,7 +172,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M1g-uG-kgN">
-                                                    <rect key="frame" x="40" y="190" width="31" height="20"/>
+                                                    <rect key="frame" x="40" y="192" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="P-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nNN-ao-YqG">
                                                             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -198,7 +196,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GCj-Rv-su9">
-                                                    <rect key="frame" x="264" y="180" width="40" height="40"/>
+                                                    <rect key="frame" x="264" y="182" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="hyh-ca-kzr"/>
                                                         <constraint firstAttribute="width" constant="40" id="iWh-jh-b5h"/>
@@ -209,7 +207,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sz4-nF-Yln">
-                                                    <rect key="frame" x="81" y="190" width="31" height="20"/>
+                                                    <rect key="frame" x="81" y="192" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="P-SeeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ufy-EA-sr9">
                                                             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -241,6 +239,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="GCj-Rv-su9" secondAttribute="trailing" id="9cu-Mv-tpX"/>
                                                 <constraint firstItem="M1g-uG-kgN" firstAttribute="centerY" secondItem="Xm4-bL-pTE" secondAttribute="centerY" id="ABN-LP-uaG"/>
                                                 <constraint firstAttribute="trailing" secondItem="VZc-kF-vNu" secondAttribute="trailing" constant="10" id="BUt-Yy-7Yt"/>
+                                                <constraint firstItem="Xm4-bL-pTE" firstAttribute="top" secondItem="Brc-9e-1li" secondAttribute="bottom" id="BhK-9b-uuB"/>
                                                 <constraint firstAttribute="bottom" secondItem="GCj-Rv-su9" secondAttribute="bottom" id="CSm-bd-T7R"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="trailing" secondItem="VZc-kF-vNu" secondAttribute="trailing" id="FfX-3i-4LQ"/>
                                                 <constraint firstItem="OSc-wG-GHP" firstAttribute="top" secondItem="VZc-kF-vNu" secondAttribute="bottom" constant="6" id="GfG-we-NT7"/>
@@ -279,7 +278,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXProfileSongActionCell" rowHeight="65" id="UkH-fu-roH" userLabel="HXProfileSongActionCell" customClass="HXProfileSongActionCell">
-                                <rect key="frame" x="0.0" y="256" width="320" height="65"/>
+                                <rect key="frame" x="0.0" y="258" width="320" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UkH-fu-roH" id="G4s-Vu-p2o">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
@@ -337,7 +336,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HXProfileSongCell" rowHeight="65" id="8uk-eA-52n" userLabel="HXProfileSongCell" customClass="HXProfileSongCell">
-                                <rect key="frame" x="0.0" y="321" width="320" height="65"/>
+                                <rect key="frame" x="0.0" y="323" width="320" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8uk-eA-52n" id="64t-gY-sUr">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
